# 3d-external-visualizer

./: README.md  create_cube.py  cube.stl  load_cube.py  load_stl.py  model_server.py  package-lock.json  server.js
3d-streamer-rust/: Cargo.toml
js_viewer/: package-lock.json  readme.txt  viewer.js
public/: index.html  viewer.js
rust_code/mesh-streamer/: Cargo.toml
rust_code/mesh-streamer/src/: lib.rs
streamer-3d-rust/: Cargo.toml
streamer-3d-rust-testapp/: Cargo.toml
streamer-3d-rust-testapp/src/: main.rs
streamer-3d-rust/src/: api.rs  lib.rs  mesh.rs  websocket.rs
user_side/: susan.stl
viewer-3d-js/: index.html  package-lock.json  package.json  readme.txt  viewer.js
