[package]
name = "streamer-3d-rust-testapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stl_io = "0.7.0"            # Loading STLs and 3D data structures
streamer_3d_rust = { path = "../streamer-3d-rust" }