[package]
name = "streamer_3d_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stl_io = "0.7.0"            # Loading STLs and 3D data structures
serde_json = "1.0"          # For serializing the mesh
tungstenite = "0.27.0"
tokio-tungstenite = "0.27.0"
tokio = { version = "1.46.1", features = ["full"] }
futures = "0.3.28"