[package]
name = "mesh-streamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stl_io = "0.7.0"            # Loading STLs and 3D data structures
serde_json = "1.0"          # For serializing the mesh
tungstenite = "0.16.0"      # For WebSocket
